@@ -1,5 +1,9 @@
 2022-01-26  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* cfg.mk (sc_pvm_wrappers): New rule.
+
+2022-01-26  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-ast.c (pkl_type_append_to): Avoid redundant comma in
 	function type strings.
 
